fdo#41796: sw: HTML: import CSS STYLE border on TD:

For TD elements, the SYLE attribute containing "border" properties is
read, but the borders end up not at the table cell, but on some span or
paragraph inside the cell.  So insert a special case that re-routes
the SvxBoxItems containing the borders to FixFrameFmt, where the
properties set at the TD element directly now override the SvxBoxItem
that is derived from BORDER etc. attributes of the table.
(regression from d18feffd49f4481626417daac7984b2a7e70c3bf,
 which changed the way the border attributes are written)